Completed almost all CRUD operations in Angular

--- a/task-app/src/app/app.component.html
+++ b/task-app/src/app/app.component.html
@@ -501,14 +501,7 @@
     </a>
   </div>
 
-  <div>
-    <h1>TASKS</h1>
-    <ul>
-      <li *ngFor="let task of tasks">
-        {{ task.name }}
-      </li>
-    </ul>
-  </div>
+  <app-tasks></app-tasks>
   <!-- Footer -->
   <footer>
       Love Angular?&nbsp;
