Finished CRUD operations in Angular

--- a/task-app/src/app/app.component.html
+++ b/task-app/src/app/app.component.html
@@ -501,7 +501,10 @@
     </a>
   </div>
 
-  <app-tasks></app-tasks>
+  <nav>
+    <a routerLink="/tasks">Tasks</a>
+  </nav>
+  <router-outlet></router-outlet>
   <!-- Footer -->
   <footer>
       Love Angular?&nbsp;
