--- a/task-app/src/app/tasks/dialog-overview-task-dialog.css
+++ b/task-app/src/app/tasks/dialog-overview-task-dialog.css
@@ -1,5 +1,24 @@
 mat-form-field {
   width: 100%;
+  padding-bottom: 5px;
+}
+
+.estimated-time {
+  width: 40%;
+}
+
+.actual-time {
+  width: 40%;
+  float: right;
+}
+
+.status {
+  width: 40%;
+}
+
+.save {
+  padding-top: 5px;
+  float: right;
 }
 
 /* mat-label {
