--- a/task-app/src/app/tasks/dialog-overview-task-dialog.html
+++ b/task-app/src/app/tasks/dialog-overview-task-dialog.html
@@ -17,9 +17,9 @@
   </mat-form-field>
   <mat-form-field class="status">
     <mat-label>Status:</mat-label>
-    <mat-select [(ngModel)]="task.taskState">
+    <mat-select [(ngModel)]="task.taskState" disableOptionCentering>
       <mat-option *ngFor="let option of options" [value]="option.state">{{ option.name }}</mat-option>
     </mat-select>
   </mat-form-field>
-  <button mat-stroked-button class="save" [mat-dialog-close]="task" color="primary" cdkFocusInitial>Save</button>
+  <button mat-stroked-button class="save" [mat-dialog-close]="task" color="primary">Save</button>
 </div>
