--- a/task-app/src/app/daily-planner/daily-planner.component.html
+++ b/task-app/src/app/daily-planner/daily-planner.component.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
   <h1>Display current daily planner here (today's date)</h1>
   <div *ngIf="todayDailyPlanner">
     <h2>Date: {{ todayDailyPlanner.date | date }}</h2>
@@ -18,4 +18,57 @@
     </select>
   </label>
   <button (click)="addDailyPlanner()">Save</button>
+</div> -->
+<div class="btn-group">
+  <button
+    mat-raised-button
+    color="primary"
+    class="btn btn-primary"
+    mwlCalendarPreviousView
+    [view]="view"
+    [(viewDate)]="viewDate"
+    (click)="changeWeek(-6)"
+  >
+    Previous Week
+  </button>
+  <button
+    mat-raised-button
+    color="primary"
+    class="btn btn-primary"
+    mwlCalendarPreviousView
+    [view]="view"
+    [(viewDate)]="viewDate"
+  >
+    Previous
+  </button>
+  <button
+    mat-raised-button
+    color="primary"
+    class="btn btn-primary"
+    mwlCalendarNextView
+    [view]="view"
+    [(viewDate)]="viewDate"
+  >
+    Next
+  </button>
+  <button
+    mat-raised-button
+    color="primary"
+    class="btn btn-primary"
+    mwlCalendarNextView
+    [view]="view"
+    [(viewDate)]="viewDate"
+    (click)="changeWeek(6)"
+  >
+    Next Week
+  </button>
+</div>
+<div>
+  <h3 class="date">{{ viewDate | date: 'fullDate' }}</h3>
+</div>
+<div>
+  <mwl-calendar-day-view
+    [viewDate]="viewDate"
+  >
+  </mwl-calendar-day-view>
 </div>
